welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:7: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
""""var compt = 0;
^Diagonal:15: error: not found: value posfinale
while (!posfinale){
        ^